--- a/simulation assignment2.ipynb
+++ b/simulation assignment2.ipynb
@@ -224,7 +224,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def customer(env, name, counter, service_time):\n",
-    "    \"\"\"Customer process. Each customer arrives, waits, and is then served.\"\"\"\n",
+    "    \"\"\"Customer process of FIFO.\"\"\"\n",
     "    arrival_time = env.now\n",
     "    with counter.request() as req:\n",
     "        yield req\n",
@@ -233,7 +233,7 @@
     "        yield env.timeout(service_time)\n",
     "\n",
     "def setup(env, n, rho):\n",
-    "    \"\"\"Sets up the simulation environment with n servers.\"\"\"\n",
+    "    \"\"\"Sets up the FIFO with n servers.\"\"\"\n",
     "    μ = 1.0  \n",
     "    λ = μ * rho  \n",
     "    counter = simpy.Resource(env, capacity=n)\n",
